Added repository and irepository code refactoring around product controller

--- a/DotNetCore/MVC/MyWebApp/MyWebApp.csproj
+++ b/DotNetCore/MVC/MyWebApp/MyWebApp.csproj
@@ -7,13 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+    <Compile Remove="Enum\**" />
+    <Content Remove="Enum\**" />
+    <EmbeddedResource Remove="Enum\**" />
+    <None Remove="Enum\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Enum\" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
 </Project>
