--- a/DotNetCore/MVC/MyWebApp/MyWebApp.csproj
+++ b/DotNetCore/MVC/MyWebApp/MyWebApp.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.15" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
