--- a/DotNetCore/MVC/ShopEase/appsettings.json
+++ b/DotNetCore/MVC/ShopEase/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+
+    "ShopEaseDBConnection": "Server=SHABILL\\SQLEXPRESS;Database=ShopEaseDB;User Id=sa;password=sa;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;",
+
+    "AllowedHosts": "*"
+  }
 }
