Added a new Controllers HealthManagementController in ShopEase application where we have one user input to fetch Patient medicines records

--- a/DotNetCore/MVC/ShopEase/appsettings.json
+++ b/DotNetCore/MVC/ShopEase/appsettings.json
@@ -9,6 +9,8 @@
 
     "ShopEaseDBConnection": "Server=SHABILL\\SQLEXPRESS;Database=ShopEaseDB;User Id=sa;password=sa;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;",
 
+    "HealthAppointmentManagementDBConnection": "Server=SHABILL\\SQLEXPRESS;Database=HealthAppointmentManagementDB;User Id=sa;password=sa;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;",
+
     "AllowedHosts": "*"
   }
 }
