Added a new controller Restaurant where we perform CRUD

--- a/DotNetCore/MVC/ShopEase/appsettings.json
+++ b/DotNetCore/MVC/ShopEase/appsettings.json
@@ -11,6 +11,8 @@
 
     "HealthAppointmentManagementDBConnection": "Server=SHABILL\\SQLEXPRESS;Database=HealthAppointmentManagementDB;User Id=sa;password=sa;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;",
 
+    "FoodDeliveryDBConnection": "Server=SHABILL\\SQLEXPRESS;Database=FoodDeliveryDB;User Id=sa;password=sa;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;",
+
     "AllowedHosts": "*"
   }
 }
