Added a new CustomerController in Html&JsDemo and insert data in Customer table in database

--- a/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Html&JsDemo.csproj
+++ b/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/Html&JsDemo.csproj
@@ -7,4 +7,10 @@
     <RootNamespace>Html_JsDemo</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
 </Project>
