--- a/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/appsettings.json
+++ b/DotNetCore/MVC/Html&JsDemo/Html&JsDemo/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+
+    "HtmlJsDemoDBConnection": "Server=SHABILL\\SQLEXPRESS;Database=HtmlJsDemoDB;User Id=sa;password=sa;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;",
+
+    "AllowedHosts": "*"
+  }
 }
