Added a new Project ConstructionApplication.Core.csproj Class library type where we Shift Data Model and Enum File From MVC App to Class Library

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/ConstructionApplication.csproj
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/ConstructionApplication.csproj
@@ -16,4 +16,8 @@
     <Folder Include="wwwroot\UploadedImage\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ConstructionApplication.Core\ConstructionApplication.Core.csproj" />
+  </ItemGroup>
+
 </Project>
