Created a new project which is class library type Construction ApplicationRepository and Shift All Interface and Repository class in this new Library

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/ConstructionApplication.csproj
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/ConstructionApplication.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ConstructionApplication.Core\ConstructionApplication.Core.csproj" />
+    <ProjectReference Include="..\ConstructionApplication.Repository\ConstructionApplication.Repository.csproj" />
   </ItemGroup>
 
 </Project>
