--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.json
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.json
@@ -12,5 +12,10 @@
     "CostConstructDBConnection": "Server=tcp:myfreesqldb-server.database.windows.net,1433;Initial Catalog=myFreeSQL-DB;Persist Security Info=False;User ID=sqladmin;Password=admin12#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
 
     "AllowedHosts": "*"
+  },
+
+  "ApplicationSettings": {
+    "maxFileSizeInBytes": "2097152",
+    "fileExtension": ".jpg,.jpeg,.png"
   }
 }
