Code Refactor in Contractor Controller added a new private method  for Validate Contractor Details and use where we need in controller action

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.Development.json
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.Development.json
@@ -2,7 +2,23 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "System": "Information"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
-  }
+  },
+  "ConnectionStrings": {
+
+    "CostConstructDBConnection": "Server=tcp:danishazure.database.windows.net,1433;Initial Catalog=myFreeDevSQL-DB;Persist Security Info=False;User ID=devdbuser;Password=Welcome12#Welcome12#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "ApplicationSettings": {
+    "maxFileSizeInBytes": "2097152",
+    "fileExtension": ".jpg,.jpeg,.png"
+  },
+  "AllowedHosts": "*"
 }
