--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Properties/launchSettings.json
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Properties/launchSettings.json
@@ -8,24 +8,6 @@
     }
   },
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5235",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7212;http://localhost:5235",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
@@ -33,5 +15,31 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
+  },
+  "SimpleAppWeb": {
+    "commandName": "Project",
+    "dotnetRunMessages": true,
+    "launchBrowser": true,
+    "applicationUrl": "https://localhost:7212;http://localhost:5235",
+    "environmentVariables": {
+      "ASPNETCORE_ENVIRONMENT": "Local"
+    }
+  },
+  "SimpleAppWeb-Development": {
+    "commandName": "Project",
+    "dotnetRunMessages": true,
+    "launchBrowser": true,
+    "applicationUrl": "https://localhost:7212;http://localhost:5235",
+    "environmentVariables": {
+      "ASPNETCORE_ENVIRONMENT": "Development"
+    }
+  },
+  "IIS Express": {
+    "commandName": "IISExpress",
+    "launchBrowser": true,
+    "environmentVariables": {
+      "ASPNETCORE_ENVIRONMENT": "Development"
+    }
   }
+}
 }
