--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.json
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.json
@@ -2,20 +2,27 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "System": "Information"
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   },
   "ConnectionStrings": {
 
-    //"CostConstructDBConnection": "Server=SHABILL\\SQLEXPRESS;Database=CostConstructDB;User Id=sa;password=sa;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;",
+    "CostConstructDBConnection": "Server=SHABILL\\SQLEXPRESS;Database=CostConstructDB;User Id=sa;password=sa;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;"
 
-    "CostConstructDBConnection": "Server=tcp:myfreesqldb-server.database.windows.net,1433;Initial Catalog=myFreeSQL-DB;Persist Security Info=False;User ID=sqladmin;Password=admin12#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    //"CostConstructDBConnection": "Server=tcp:danishazure.database.windows.net,1433;Initial Catalog=myFreeDevSQL-DB;Persist Security Info=False;User ID=devdbuser;Password=Welcome12#Welcome12#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
-    "AllowedHosts": "*"
+    //"CostConstructDBConnection": "Server=tcp:myfreesqldb-server.database.windows.net,1433;Initial Catalog=myFreeSQL-DB;Persist Security Info=False;User ID=sqladmin;Password=admin12#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-
   "ApplicationSettings": {
     "maxFileSizeInBytes": "2097152",
     "fileExtension": ".jpg,.jpeg,.png"
-  }
+  },
+  "AllowedHosts": "*"
 }
