--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication.Repository/ConstructionApplication.Repository.csproj
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication.Repository/ConstructionApplication.Repository.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ConstructionApplication.Core\ConstructionApplication.Core.csproj" />
-	<PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="Dapper" Version="2.1.66" />
+	<PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
 </Project>
