Created a Dynamic Repository Pattern Configuration based on a value from appsettings.json and we use 'if' condition in Program.cs

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.json
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.json
@@ -22,7 +22,8 @@
   },
   "ApplicationSettings": {
     "maxFileSizeInBytes": "2097152",
-    "fileExtension": ".jpg,.jpeg,.png"
+    "fileExtension": ".jpg,.jpeg,.png",
+    "ConnectionString": "AdoDotNet" //"AdoDotNet" "AdoDotNetUsingSp", "Dapper", "DapperUsingSp"
   },
   "AllowedHosts": "*"
 }
