Added a new html page for PlayAlertSoundUsingJavaScript

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.json
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.json
@@ -14,18 +14,16 @@
   },
   "ConnectionStrings": {
 
-    "CostConstructDBConnection": "Server=SHABILL\\SQLEXPRESS;Database=Dev-Database;User Id=sa;password=sa;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;"
-
     //"CostConstructDBConnection": "Server=SHABILL\\SQLEXPRESS;Database=CostConstructDB;User Id=sa;password=sa;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;MultipleActiveResultSets=true;"
 
     //"CostConstructDBConnection": "Server=tcp:danishazure.database.windows.net,1433;Initial Catalog=myFreeDevSQL-DB;Persist Security Info=False;User ID=devdbuser;Password=Welcome12#Welcome12#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
-    //"CostConstructDBConnection": "Server=tcp:myfreesqldb-server.database.windows.net,1433;Initial Catalog=myFreeSQL-DB;Persist Security Info=False;User ID=sqladmin;Password=admin12#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "CostConstructDBConnection": "Server=tcp:myfreesqldb-server.database.windows.net,1433;Initial Catalog=myFreeSQL-DB;Persist Security Info=False;User ID=sqladmin;Password=admin12#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "ApplicationSettings": {
     "maxFileSizeInBytes": "2097152",
     "fileExtension": ".jpg,.jpeg,.png",
-    "DalTechnology": "AdoDotNet" //"AdoDotNet" "AdoDotNetUsingSp", "Dapper", "DapperUsingSp"
+    "DalTechnology": "DapperUsingSp" //"AdoDotNet" "AdoDotNetUsingSp", "Dapper", "DapperUsingSp"
   },
   "AllowedHosts": "*"
 }
