--- a/DotNetCore/react-app/package.json
+++ b/DotNetCore/react-app/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^2.9.11",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "framer-motion": "^12.12.1",
     "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
