Added a new feature on UI for multiple Select DropDown and add new Repositories using Dapper

--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.json
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/appsettings.json
@@ -23,7 +23,7 @@
   "ApplicationSettings": {
     "maxFileSizeInBytes": "2097152",
     "fileExtension": ".jpg,.jpeg,.png",
-    "DalTechnology": "AdoDotNet" //"AdoDotNet" "AdoDotNetUsingSp", "Dapper", "DapperUsingSp"
+    "DalTechnology": "Dapper" //"AdoDotNet" "AdoDotNetUsingSp", "Dapper", "DapperUsingSp"
   },
   "AllowedHosts": "*"
 }
