--- a/DotNetCore/MVC/CostConstruct/ConstructionApplication/Properties/launchSettings.json
+++ b/DotNetCore/MVC/CostConstruct/ConstructionApplication/Properties/launchSettings.json
@@ -1,12 +1,4 @@
-﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:30928",
-      "sslPort": 44387
-    }
-  },
+{
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
@@ -14,15 +6,10 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    }
-  },
-  "SimpleAppWeb": {
-    "commandName": "Project",
-    "dotnetRunMessages": true,
-    "launchBrowser": true,
-    "applicationUrl": "https://localhost:7212;http://localhost:5235",
-    "environmentVariables": {
-      "ASPNETCORE_ENVIRONMENT": "Local"
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "distributionName": ""
     }
   },
   "SimpleAppWeb-Development": {
@@ -34,12 +21,28 @@
       "ASPNETCORE_ENVIRONMENT": "Development"
     }
   },
+  "SimpleAppWeb": {
+    "commandName": "Project",
+    "dotnetRunMessages": true,
+    "launchBrowser": true,
+    "applicationUrl": "https://localhost:7212;http://localhost:5235",
+    "environmentVariables": {
+      "ASPNETCORE_ENVIRONMENT": "Local"
+    }
+  },
   "IIS Express": {
     "commandName": "IISExpress",
     "launchBrowser": true,
     "environmentVariables": {
       "ASPNETCORE_ENVIRONMENT": "Development"
     }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:30930",
+      "sslPort": 0
+    }
   }
-}
 }
